--- a/index.css
+++ b/index.css
@@ -6,5 +6,5 @@ a {
     font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     text-decoration: none;
-    color: black
+    color: gray;
 }
