--- a/index.css
+++ b/index.css
@@ -2,9 +2,17 @@ h1, h2, h3, h4, h5 {
     font-family: 'Crimson Text', serif;
 }
 
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
 a {
     font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     text-decoration: none;
-    color: gray;
+    color: #111111;
 }
